--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Angular CI
 
 on:
   push:
@@ -11,21 +11,51 @@ on:
 
 jobs:
   build:
-
+    name: Angular Build
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    env: 
+        node: 18.x
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - name: Checkout main repository
+        uses: actions/checkout@v4
+
+      - name: Use Node.js ${{ env.node }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.node }}
+          cache: 'npm'
+      - name: Install Dependencys
+        run: npm ci
+      - name: Build project
+        run: npm run build --if-present
+      - name: Archive production artifact
+        uses: actions/upload-artifact@main
+        with:
+          name: dist
+          path: dist
+    
+  deploy:
+    name: Angular Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    env: 
+      servername: ${{secrets.GITHUB_TOKEN}}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Download Artifact
+        uses: actions/download-artifact@main
+        with:
+          name: dist
+          path: dist
+      - name: Sync files to hosting
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        with:
+          server: ${{ secrets.FTP_SERVERNAME }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+
+
+    
+    
