--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,6 +55,9 @@ jobs:
           server: ${{ secrets.FTP_SERVERNAME }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
+          port: 21
+          ftp_ssl_allow: 'false'
+          net_max_retries: 0
 
 
     
