--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -57,8 +57,18 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: 21
-          ftp_ssl_allow: false
+          max_retries: 7
+          no_symlinks: false
+          ftp_ssl_allow: true
+          ftp_use_feat: true
+          ftp_nop_interval: 9
           net_max_retries: 0
+          net_persist_retries: 11
+          net_timeout: 13s
+          dns_max_retries: 17
+          dns_fatal_timeout: never
+          lftp_settings: "set cache:cache-empty-listings true; set cmd:status-interval 1s; set http:user-agent 'firefox';"
+
 
 
     
