--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Archive production artifact
         uses: actions/upload-artifact@main
         with:
-          name: dist
-          path: dist
+          name: dist_dogger
+          path: dist/dogger/browser
     
   deploy:
     name: Angular Deploy
@@ -58,12 +58,20 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@main
         with:
-          name: dist
-          path: dist
+          name: dist_dogger
+          path: dist/dogger/browser
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-        # uses: airvzxf/ftp-deployment-action@latest
         with:
           server: ${{ env.servername }}
           username: ${{ env.username }}
           password: ${{ env.password }}
+          dangerous-clean-slate: true
+          exclude: |
+            **/.git*
+            **/.git*/**
+            **/node_modules/**
+            fileToExclude.txt
+            .vscode/*
+            .htaccess
+            applications/*
