se cambia la configuracion del la ruta del build

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,12 +29,7 @@ jobs:
         run: npm ci
       - name: Build project
         run: npm run build --if-present
-      - name: Archive production artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: dist_dogger
-          path: dist/dogger/browser
-    
+
   deploy:
     name: Angular Deploy
     needs: build
@@ -55,17 +50,14 @@ jobs:
         run: echo "El nombre del servidor esta vacio"
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Download Artifact
-        uses: actions/download-artifact@main
-        with:
-          name: dist_dogger
-          path: dist/dogger/browser
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ env.servername }}
           username: ${{ env.username }}
           password: ${{ env.password }}
+          local-dir: '/dist/dogger/browser/'
+          server-dir: '/'
           dangerous-clean-slate: true
           exclude: |
             **/.git*
@@ -75,4 +67,4 @@ jobs:
             .vscode/*
             .htaccess
             applications/*
-            
+
