--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -66,7 +66,7 @@ jobs:
           server: ${{ env.servername }}
           username: ${{ env.username }}
           password: ${{ env.password }}
-          local-dir: /dist/dogger/browser
+          local-dir: /dist/dogger/browser/
           dangerous-clean-slate: true
           exclude: |
             **/.git*
